force-app/main/default/objects/UserStory__c/UserStory__c.object-meta.xml
<CustomObject>
    <description>A single feature, capable of being delivered in isolation to production.</description>
    <label>User Story</label>
    <nameField>
        <displayFormat>US-{00000000}</displayFormat>
        <label>User Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>