force-app/main/default/objects/UserStory__c/fields/AcceptanceCriteria__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceCriteria__c</fullName>
    <inlineHelpText>If the story meets this criteria, it should be accepted as completed work.</inlineHelpText>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>