force-app/main/default/objects/UserStory__c/fields/AcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptedDate__c</fullName>
    <description>The date that the story was marked Accepted.</description>
    <inlineHelpText>The date that the story was marked Accepted.</inlineHelpText>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>