force-app/main/default/objects/UserStory__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person that is working on the User Story.</description>
    <inlineHelpText>The person that is working on the User Story.</inlineHelpText>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserStories</relationshipName>
    <type>Lookup</type>
</CustomField>