force-app/main/default/objects/UserStory__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>As a __, I want __, So that __.</description>
    <inlineHelpText>As a __, I want __, So that __.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>