force-app/main/default/objects/UserStory__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <description>The epic that this User Story belongs to.</description>
    <inlineHelpText>Each User Story should belong to an Epic.</inlineHelpText>
    <label>Epic</label>
    <referenceTo>Epic__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>UserStories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>