force-app/main/default/objects/UserStory__c/fields/LOE__c.field-meta.xml
<CustomField>
    <fullName>LOE__c</fullName>
    <description>The Level of Effort for a User Story.
1 is a few hours. 2 is about a day. 3 is more than one day. 5 is about a week. 8 is about two weeks. 13 and above should be reserved as red flags, to be used when a story needs more discussion or to be broken down into smaller pieces.</description>
    <inlineHelpText>The Level of Effort for a User Story.
1 is a few hours. 2 is about a day. 3 is more than one day. 5 is about a week. 8 is about two weeks. 13 and above should be reserved as red flags, to be used when a story needs more discussion or to be broken down into smaller pieces.</inlineHelpText>
    <label>LOE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>