force-app/main/default/objects/UserStory__c/fields/LOENumber__c.field-meta.xml
<CustomField>
    <fullName>LOENumber__c</fullName>
    <description>Convert the LOE picklist to a number so it can be used in a rollup summary.</description>
    <formula>VALUE(TEXT(LOE__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOE Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>