force-app/main/default/objects/UserStory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Where is the User Story in the SDLC?</description>
    <inlineHelpText>Where is the User Story in the SDLC?</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ALMStatus</valueSetName>
    </valueSet>
</CustomField>