force-app/main/default/objects/UserStory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enhancement</fullName>
                <default>true</default>
                <label>Enhancement</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Spike</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>