force-app/main/default/objects/UserStory__c/listViews/Accepted.listView-meta.xml
<ListView>
    <fullName>Accepted</fullName>
    <columns>Epic__c</columns>
    <columns>Sprint__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>LOE__c</columns>
    <filterScope>Everything</filterScope>
    <label>Accepted</label>
</ListView>