force-app/main/default/objects/UserStory__c/listViews/Blocked.listView-meta.xml
<ListView>
    <fullName>Blocked</fullName>
    <columns>Epic__c</columns>
    <columns>Sprint__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>LOE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Blocked</value>
    </filters>
    <label>Blocked</label>
</ListView>