force-app/main/default/objects/UserStory__c/listViews/Not_Started.listView-meta.xml
<ListView>
    <fullName>Not_Started</fullName>
    <columns>Epic__c</columns>
    <columns>Sprint__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>LOE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>Not Started</label>
</ListView>